# codebase

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  README.md
.agentra/health-ledger/: agentic-codebase-cli.json
.github/workflows/: canonical-sister-guardrails.yml  ci.yml  release.yml  social-release-broadcast.yml
crates/agentic-codebase-cli/: Cargo.toml  README.md
crates/agentic-codebase-cli/src/: main.rs
crates/agentic-codebase-ffi/: Cargo.toml  README.md
crates/agentic-codebase-ffi/src/: lib.rs
crates/agentic-codebase-mcp/: Cargo.toml  README.md
crates/agentic-codebase-mcp/src/: bridges.rs  ghost_bridge.rs  main.rs
docs/: command-surface.md  faq.md  integration-guide.md  quickstart.md  runtime-install-sync.md
docs/ecosystem/: AUTONOMIC_OPS_USER_IMPACT_WALKTHROUGH.md  CANONICAL_ECOSYSTEM_INDEPENDENCE_CONTRACT.md  CANONICAL_SISTER_KIT.md
docs/public/: SCENARIOS-AGENTIC-CODEBASE.md  api-reference.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  experience-with-vs-without.md  faq.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  overview.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json
examples/: local_ollama.rs
npm/wasm/: Cargo.toml
paper/paper-i-semantic-compiler/: agenticcodebase-paper.tex
python/: pyproject.toml
scripts/: check-canonical-sister.sh  check-install-commands.sh  install.sh  publish.sh  test-primary-problems.sh
src/: contracts.rs  lib.rs
src/bridges/: mod.rs  traits.rs
src/cache/: lru.rs
src/cli/: commands.rs
src/engine/: impact.rs  mod.rs  regression.rs
src/grounding/: citation.rs  engine.rs  hallucination.rs  mod.rs  truth.rs
src/index/: mod.rs  semantic_search.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/metrics/: audit.rs  conservation.rs  mod.rs  tokens.rs
src/parse/: cpp.rs  csharp.rs  java.rs  parser.rs
src/query/: intent.rs  mod.rs  pagination.rs
src/semantic/: architecture.rs  concept_nav.rs  mod.rs  pattern_extract.rs  resolver.rs
src/temporal/: archaeology.rs  mod.rs  prophecy_v2.rs
src/workspace/: compare.rs  manager.rs  mod.rs  translation.rs
testdata/java/com/example/core/: Base.java  Workable.java  Worker.java
testdata/java/com/example/other/: Helper.java
testdata/java/com/example/shared/: Helper.java
testdata/java/com/obf/: a.java
tests/: edge_cases.rs  edge_cases_inventions.rs  phase11_stress.rs  phase2_parsing.rs  phase3_semantic.rs  phase6_cli.rs  phase7_mcp.rs  stress_grounding.rs  stress_integration.rs  stress_mcp.rs  stress_workspace.rs
