[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-codebase"
version = "0.2.0"
description = "Semantic code compiler for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Agentra Labs"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "codebase", "semantic", "analysis", "mcp"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/agentralabs/agentic-codebase"
Documentation = "https://github.com/agentralabs/agentic-codebase/tree/main/docs"
Repository = "https://github.com/agentralabs/agentic-codebase"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_codebase"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
