[package]
name = "agentic-codebase-cli"
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-codebase"
homepage = "https://agentralabs.tech"
authors = ["Agentra Labs <contact@agentralabs.tech>"]
description = "CLI tool for AgenticCodebase"
keywords = ["ai", "agent", "code-analysis", "cli", "graph"]
categories = ["command-line-utilities"]

[[bin]]
name = "acb"
path = "src/main.rs"

[dependencies]
agentic-codebase = { path = "../..", version = "0.2.3" }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
