[package]
name = "agentic-codebase-ffi"
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-codebase"
homepage = "https://agentralabs.tech"
authors = ["Agentra Labs <contact@agentralabs.tech>"]
description = "FFI bindings for AgenticCodebase"
keywords = ["ffi", "code-analysis", "ai", "agent", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agentic-codebase = { path = "../..", version = "0.2.3" }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
python = ["pyo3"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
