[package]
name = "agentic-codebase-wasm"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "WASM bindings for agentic-codebase query engine — loads pre-compiled .acb graphs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
